Fixed scrollbar on edge

--- a/styles/css/application.css
+++ b/styles/css/application.css
@@ -406,6 +406,7 @@ footer .fb-page {
 
 .column.hidden {
   flex: 0;
+  overflow: hidden;
 }
 
 .column.hidden .column-content-wrapper {
